single-relay-controller: Send data in case of change

--- a/relay-controllers/single-relay-controller.yaml
+++ b/relay-controllers/single-relay-controller.yaml
@@ -58,6 +58,8 @@ sensor:
   - platform: wifi_signal
     name: ${devicename} wifi signal
     update_interval: 60s
+    filters:
+      - delta: 2.0  # Only send if WiFi signal changes by 2 dBm or more
 
   # human readable uptime sensor output to the text sensor above
   - platform: uptime
